@@ -163,6 +163,37 @@ typedef enum
     HINT_METRICS_ON = CAIRO_HINT_METRICS_ON
 } HintMetrics;
 
+typedef enum
+{
+    SURFACE_TYPE_IMAGE = CAIRO_SURFACE_TYPE_IMAGE,
+    SURFACE_TYPE_PDF = CAIRO_SURFACE_TYPE_PDF,
+    SURFACE_TYPE_PS = CAIRO_SURFACE_TYPE_PS,
+    SURFACE_TYPE_XLIB = CAIRO_SURFACE_TYPE_XLIB,
+    SURFACE_TYPE_XCB = CAIRO_SURFACE_TYPE_XCB,
+    SURFACE_TYPE_GLITZ = CAIRO_SURFACE_TYPE_GLITZ,
+    SURFACE_TYPE_QUARTZ = CAIRO_SURFACE_TYPE_QUARTZ,
+    SURFACE_TYPE_WIN32 = CAIRO_SURFACE_TYPE_WIN32,
+    SURFACE_TYPE_BEOS = CAIRO_SURFACE_TYPE_BEOS,
+    SURFACE_TYPE_DIRECTFB = CAIRO_SURFACE_TYPE_DIRECTFB,
+    SURFACE_TYPE_SVG = CAIRO_SURFACE_TYPE_SVG
+} SurfaceType;
+
+typedef enum
+{
+    PATTERN_TYPE_SOLID = CAIRO_PATTERN_TYPE_SOLID,
+    PATTERN_TYPE_SURFACE = CAIRO_PATTERN_TYPE_SURFACE,
+    PATTERN_TYPE_LINEAR = CAIRO_PATTERN_TYPE_LINEAR,
+    PATTERN_TYPE_RADIAL = CAIRO_PATTERN_TYPE_RADIAL
+} PatternType;
+
+typedef enum
+{
+    FONT_TYPE_TOY = CAIRO_FONT_TYPE_TOY,
+    FONT_TYPE_FT = CAIRO_FONT_TYPE_FT,
+    FONT_TYPE_WIN32 = CAIRO_FONT_TYPE_WIN32,
+    FONT_TYPE_ATSUI = CAIRO_FONT_TYPE_ATSUI
+} FontType;
+
 } // namespace Cairo
 
 #endif //__CAIROMM_ENUMS_H
